# ledger-iota-app

./: .gitignore  .gitmodules  Makefile  README.md  build.sh
.github/workflows/: build.yml  ci-workflow.yml  codeql.yml  publish-docker.yml
codeql/: Dockerfile  codeql-local.sh  run_code_analysis.sh
docker/: Dockerfile  README.md  build_docker.sh  install_all.sh  load_nanos.sh  load_nanos_mainnet.sh  run_simulator.sh
docs/: specification.md  specification_chrysalis.md  specification_shimmer.md
fuzz/: CMakeLists.txt  README.md  fuzztest.c  os.h
makefile_conf/chain/: iota.mk  shimmer.mk
src/: api.c  api.h  debugprintf.c  debugprintf.h  iota_io.c  iota_io.h  macros.h  main.c  nv_mem.c  nv_mem.h
src/crypto_helpers/: crypto_helpers.c  crypto_helpers.h
src/iota/: abstraction.c  abstraction.h  address.c  address.h  bech32.c  bech32.h  blindsigning.c  blindsigning.h  blindsigning_stardust.c  blindsigning_stardust.h  constants.h  ed25519.c  ed25519.h  essence.c  essence.h  essence_chrysalis.c  essence_chrysalis.h  essence_stardust.c  essence_stardust.h  internal_transfer.c  internal_transfer.h  public_key.c  public_key.h  signing.c  signing.h
src/ui/: ui.c  ui.h  ui_common.c  ui_common.h
src/ui/nano/: flow_generating_addresses.c  flow_generating_addresses.h  flow_generating_public_keys.c  flow_generating_public_keys.h  flow_generic_error.c  (+20 more)
tests/: Dockerfile  README.md  build_docker.sh  reference_nanos.hex  reference_nanos.json  reference_nanox.hex  reference_nanox.json  run_tests_docker.sh  test_headless.sh  tests.c
tests/testdata/: README.md  reference.hex
(+18 files in other folders)
